--- a/src/css/parts/header.less
+++ b/src/css/parts/header.less
@@ -8,6 +8,10 @@ header {
     z-index: 2;
 }
 
+.modal-window.modal-window_call {
+	background: url(../../images/background/window-call.png) no-repeat center;
+}
+
 .mobile-menu {
     display: none;
     background: #dee2e5;
