--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1186,6 +1186,34 @@
 	display: none;
 }
 
+.modal-window_success {
+	background: url(../images/background/window-success.png) no-repeat center;
+}
+
+.modal-window_error {
+	background: #e3e8ea;
+}
+
+.modal-inner__icon {
+	background: url(../images/icons/ok.png) no-repeat center;
+	width: 140px;
+	height: 100px;
+	margin: 0 auto;
+	margin-bottom: 10px;
+}
+
+.modal-inner__error {
+	background: url(../images/icons/error.png) no-repeat center;
+}
+
+.modal-inner__after-caption {
+	font: 400 30px "FinchFrame3";
+	color: rgb(55, 54, 54);
+	text-align: center;
+	margin-top: 15px;
+}
+
+
 /*account*/
 
 .account-nav {
