--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1202,7 +1202,7 @@
 	margin-bottom: 10px;
 }
 
-.modal-inner__error {
+.modal-inner__icon_error {
 	background: url(../images/icons/error.png) no-repeat center;
 }
 
@@ -1212,7 +1212,6 @@
 	text-align: center;
 	margin-top: 15px;
 }
-
 
 /*account*/
 
@@ -1743,7 +1742,7 @@
 .cake-page .sheet-torn_top {
 	background: url(../images/background/cake_background-top.png) no-repeat bottom;
 	background-size: 100%;
-	top: -125px;
+	top: -140px;
 }
 
 .card-info__cake {
