--- a/src/css/parts/ui-slider-range.less
+++ b/src/css/parts/ui-slider-range.less
@@ -16,11 +16,11 @@
 }
 
 .ui-slider-weight {
-    font-size: 21px;
+    font: 400 21px "FinchFrame3";
     color: rgb(55, 54, 54);
     font-weight: 700;
     position: absolute;
-    bottom: -22px;
+    bottom: -25px;
 }
 
 .ui-slider::last-child {
